# OpenAMP-Foundry

./: .env.example  .gitignore  AGENTS.md  AGENT_TASKS.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE_NOTICE.md  DUAL_USE_REVIEW.md  GOAL.md  GOVERNANCE.md  LOOP.md  MISSION.md  MODEL_RELEASE_POLICY.md  Makefile  NOTICE  PATENT_NONASSERT.md  README.md  RESPONSIBLE_USE.md  SAFETY.md  SECURITY.md  SKILL.md  TRADEMARK_POLICY.md  VISION.md  new-vision.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
configs/: exit_code_registry.json  metric_polarity_registry.json  phase3.yaml  pipeline.yaml  recalibration_policy.yaml  wave1_pass_fail.yaml
data/: README.md
decision_logs/: DECISION_LOG_2026-07-06.md  INDEX.md
docs/: 50_LOOP_PLAN.md  ADOPTION_METRICS.md  AGENTS.md  AGENT_FAILURE_MODES.md  ARCHITECTURE.md  ARCHIVAL_FORMAT_SPEC.md  ARTIFACT_VERSIONING.md  ASSAY_PREREGISTRATION.md  BENCHMARKING.md  BENCHMARK_CARD.md  BENCHMARK_GOVERNANCE.md  CALIBRATION_POLICY.md  CITATION_TEMPLATE.md  CI_AND_QUALITY_GATES.md  CLAIM_REVIEW_CHECKLIST.md  COLLABORATION_PLAYBOOK.md  CONTRIBUTOR_COVENANT.md  DATA_GOVERNANCE.md  DECISION_RULES.md  DEPRECATION_POLICY.md  DISCOVERY_PREDICTION.md  DOCS_MAINTENANCE.md  EVIDENCE_CERTIFICATE.md  EXPERT_REVIEW_PACK.md  EXTERNAL_PREDICTOR_CONSENSUS.md  EXTERNAL_REVIEW_PACKET.md  EXTERNAL_VALIDATION_AGENT_PROMPT.md  FAILED_SIMULATION_AS_NEGATIVE_EVIDENCE.md  FIRST_RUN_WALKTHROUGH.md  GOLD_STANDARD_CALIBRATION.md  HUMAN_AGENT_COLLABORATION.md  ISSUE_LABEL_TAXONOMY.md  LAB_PARTNER_ONBOARDING.md  (+43 more)
(+1563 files in other folders)
